Alignment for add contact text input fixed

--- a/client/src/css/textinput.css
+++ b/client/src/css/textinput.css
@@ -51,7 +51,6 @@
 
 .text-input-add-contact-number{
     width: 400px;
-    margin-top: 40px;
     align-self: center;
 }
 
